<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyDreams</string>
    <string name="sign_in_caps">ВОЙТИ</string>
    <string name="forgot_password_caps">ЗАБЫЛИ ПАРОЛЬ?</string>
    <string name="edit_login_hint">Логин</string>
    <string name="edit_password_hint">Пароль</string>
    <string name="enter_login_error_message">Введите логин</string>
    <string name="enter_password_error_message">Введите пароль</string>
    <string name="sign_in_dialog_title">Вход</string>
    <string name="please_wait">Пожалуйста, подождите…</string>
    <string name="connection_error_message">Ошибка подключения, проверьте соединение с интернетом</string>
    <string name="something_wrong">Упс! Что то пошло не так</string>
    <string name="choice_photo_effect">Выберите фотоэффект</string>
    <string name="edit_dream_name_hint">Название мечты</string>
    <string name="edit_dream_desc_hint">Описание мечты</string>
    <string name="add_to_flybook">ДОБАВИТЬ В DREAMBOOK</string>
    <string name="cancel_caps">ОТМЕНА</string>
    <string name="choose_caps">ВЫБРАТЬ</string>
    <string name="gallery">Галерея</string>
    <string name="camera">Фотокамера</string>
    <string name="choice_photo_dialog_title">Способ загрузки фотографии</string>
    <string name="sign_in_error_message">Неверный логин или пароль</string>
    <string name="enter_dream_name_error_message">Введите название мечты</string>
    <string name="enter_dream_desc_error_message">Введите описание мечты</string>
    <string name="enter_post_title_error_message">Введите название записи</string>
    <string name="enter_post_desc_error_message">Введите описание записи</string>
    <string name="add_dream_dialog_title">Добавляем мечту</string>
    <string name="update_dream_dialog_title">Обновляем мечту</string>
    <string name="add_post_dialog_title">Добавляем запись</string>
    <string name="add_dream_error_message">Не удалось добавить мечту</string>
    <string name="update_dream_error_message">Не удалось обновить мечту</string>
    <string name="add_post_error_message">Не удалось добавить запись</string>
    <string name="add_dream_success_dialog_title">Ваша мечта успешно добавлена в Dreambook</string>
    <string name="update_dream_success_dialog_title">Ваша мечта успешно обновлена</string>
    <string name="add_post_success_dialog_title">Ваша запись успешно добавлена в Dreambook</string>
    <string name="upload_more_caps">ЗАГРУЗИТЬ ЕЩЁ</string>
    <string name="close_caps">ЗАКРЫТЬ</string>
    <string name="should_choose_photo">Следует выбрать фотографию мечты</string>
    <string name="temp_string">- - -</string>
    <string name="photo_processing_dialog_titile">Обработка фотографии</string>
    <string name="photo_processing_failed">Не удалось обработать изображение</string>
    <string name="logout">Выйти</string>
    <string name="add_dream_toolbar_title">Добавление мечты</string>
    <string name="search_location_nint">Поиск</string>
    <string name="search_location_label">Поиск</string>
    <string name="city">Город</string>
    <string name="search">Поиск</string>
    <string name="length_dream_name_error_message_format">Введите от %1$d до %2$d символов</string>
    <string name="length_dream_desc_error_message_format">Введите от %1$d до %2$d символов</string>
    <string name="length_post_name_error_message_format">Введите от %1$d до %2$d символов</string>
    <string name="length_post_desc_error_message_format">Введите от %1$d до %2$d символов</string>
    <string name="edit_first_name_hint">Имя</string>
    <string name="edit_last_name_hint">Фамилия</string>
    <string name="edit_email_hint">E-mail</string>
    <string name="edit_phone_hint">Телефон</string>
    <string name="edit_confirm_password_hint">Повторите пароль</string>
    <string name="sex_male">Мужской</string>
    <string name="sex_female">Женский</string>
    <string name="edit_birth_hint">Дата рождения</string>
    <string name="edit_location_hint">Город</string>
    <string name="agree_conditions">Я согласен с условиями</string>
    <string name="do_sign_up_caps">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_up_caps">РЕГИСТРАЦИЯ</string>
    <string name="confirm_password_error_message">Введёные пароли не совпадают</string>
    <string name="agree_conditions_error_message">Подтвердите согласие с условиями</string>
    <string name="length_password_error_message_format">Пароль должен содержать от %1$d до %2$d символов</string>
    <string name="password_must_contain_letter">Пароль должен содержать хотябы одну букву</string>
    <string name="enter_birth_error_message">Укажите дату рождения</string>
    <string name="enter_location_error_message">Выберите город</string>
    <string name="invalid_chars_phone_error_message">Телефон содержит недопустимые символы</string>
    <string name="length_phone_error_message_format">Телефон должен содержать от %1$d до %2$d цифр</string>
    <string name="enter_valid_email_error_message">Введите корректный E-mail</string>
    <string name="enter_email_error_message">Введите E-mail</string>
    <string name="length_last_name_error_message_format">Фамилия должна содержать от %1$d до %2$d символов</string>
    <string name="enter_first_name_error_message">Введите своё имя</string>
    <string name="length_first_name_error_message_format">Имя должно содержать от %1$d до %2$d символов</string>
    <string name="ok">OK</string>
    <string name="sign_up_dialog_title">Регистрация</string>
    <string name="sign_up_error_message">Не удалось зарегистрироваться, попробуйте позже</string>
    <string name="drawer_item_add">Добавить мечту</string>
    <string name="drawer_item_flybook">Dreambook</string>
    <string name="drawer_item_friends">Друзья</string>
    <string name="drawer_item_news">Новости</string>
    <string name="drawer_item_top100">Top 100</string>
    <string name="retry">Повтор</string>
    <string name="retry_update_message">Проверьте подключение\r\nи повторите попытку</string>
    <string name="activity_flybook_title">Dreambook</string>
    <string name="vip">VIP</string>
    <string name="friends_1">друзей</string>
    <string name="subscriber_1">подписчиков</string>
    <string name="launches_1">запусков</string>
    <string name="dream_proposed_1">Вам предложено</string>
    <string name="dream_proposed_format">%d мечтаний</string>
    <string name="edit_profile">Редактировать</string>
    <string name="friends_caps">ДРУЗЬЯ</string>
    <string name="subscribers_caps">ПОДПИСЧИКИ</string>
    <string name="subscribed_caps">Я ПОДПИСАН</string>
    <string name="friend_request_caps">ЗАЯВКИ</string>
    <string name="friends">Друзья</string>
    <string name="subscribers">Подписчики</string>
    <string name="subscribed">Я подписан</string>
    <string name="friend_request">Заявки</string>
    <string name="accept_caps">ПРИНЯТЬ</string>
    <string name="remove_caps">УДАЛИТЬ</string>
    <string name="accept_friend_dialog_title">Добавляем в друзья</string>
    <string name="request_friendship_success">Мечтателю отправленна заявка на дружбу</string>
    <string name="add_friend_failed">Неудалось добавить в друзья</string>
    <string name="friends_empty_list">Список друзей пуст</string>
    <string name="friends_request_empty_list">Список заявок пуст</string>
    <string name="friends_subscribed_empty_list">Вы ни на кого не подписаны</string>
    <string name="friends_subscribers_empty_list">У вас ни одного подписчика</string>
    <string name="edit_password_helper_format">Пароль должен содержать от %1$d до %2$d символов и хотябы одну букву</string>
    <string name="add_friend">Добавить друга</string>
    <string name="desc_caps">ОПИСАНИЕ</string>
    <string name="take_dream">Взять себе</string>
    <string name="proposed_dream">Предложить другу</string>
    <string name="take_dream_error_message">Неудалось взять мечту</string>
    <string name="take_dream_dialog_title">Забираем мечту</string>
    <string name="take_dream_successe_message">Вы взяли мечту себе</string>
    <string name="propose_dream_error_message">Неудалось предложить мечту</string>
    <string name="proposed_dream_dialog_title">Предлагаем мечту</string>
    <string name="likes_empty_list">Эту мечту ещё ни кто не лайнул</string>
    <string name="launches_empty_list">У этой мечты не одной марки</string>
    <string name="dream_comments_empty_list">У этой мечты нет ни одного комментария</string>
    <string name="post_comments_empty_list">У этой записи нет ни одного комментария</string>
    <string name="edit_comment_hint">Написать комментарий</string>
    <string name="empty_comment_error">Для начала введите комментарий</string>
    <string name="add_comment_dialog_title">Добавляем комментарий</string>
    <string name="add_comment_error_message">Неудалось добавить комментарий</string>
    <string name="edit_old_password_hint">Старый пароль</string>
    <string name="save">Сохранить</string>
    <string name="edit_user_title">Редактирование</string>
    <string name="enter_old_password">Введите старый пароль</string>
    <string name="update_user_dialog_title">Сохраняем изменения</string>
    <string name="update_user_error_message">Неудалось обнвить профиль</string>
    <string name="crop__saving">Изображение сохраняется…</string>
    <string name="crop__wait">Пожалуйста, подождите…</string>
    <string name="crop__pick_error">Нет доступных изображений</string>
    <string name="crop__done">ГОТОВО</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">ОТМЕНА</string>
    <string name="add_friend_dialog_title">Добавляем в друзья</string>
    <string name="update_avatar_error_message">Неудалось загрузить аватар</string>
    <string name="go_to_flybook_caps">Dreambook</string>
    <string name="comment">Комментировать</string>
    <string name="comment_caps">КОММЕНТИРОВАТЬ</string>
    <string name="comment_count_format_caps_0">%d КОММЕНТАРИЕВ</string>
    <string name="comment_count_format_caps_1">%d КОММЕНТАРИЙ</string>
    <string name="comment_count_format_caps_2_4">%d КОММЕНТАРИЯ</string>
    <string name="comment_count_format_caps_5">%d КОММЕНТАРИЕВ</string>
    <string name="likes_count_format_caps_0">%d ЛАЙКОВ</string>
    <string name="likes_count_format_caps_1">%d ЛАЙК</string>
    <string name="likes_count_format_caps_2_4">%d ЛАЙКА</string>
    <string name="likes_count_format_caps_5">%d ЛАЙКОВ</string>
    <string name="launches_count_format_caps_0">%d МАРОК</string>
    <string name="launches_count_format_caps_1">%d МАРОКА</string>
    <string name="launches_count_format_caps_2_4">%d МАРОКИ</string>
    <string name="launches_count_format_caps_5">%d МАРОК</string>
    <string name="edit_status_hint">Статус</string>
    <string name="give_mark">Подарить марку</string>
    <string name="like_dream_dialog_title">Лайкаем мечту</string>
    <string name="like_dream_success">Вы лайкнули эту мечту</string>
    <string name="like_post_success">Вы лайкнули эту запись</string>
    <string name="photos">Фотографии</string>
    <string name="add_photo">Добавить фото</string>
    <string name="edit">Редактировать</string>
    <string name="cancel">Отменить</string>
    <string name="activity_photos_title">Фотографии</string>
    <string name="save_photos_dialog_title">Сохраняем изменения</string>
    <string name="subscribe">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="unfriend">Удалить из друзей</string>
    <string name="deny_friendship_request">Отменить заявку</string>
    <string name="mark_dream_done">Отметить как исполненную</string>
    <string name="tour_title_1">Добавляйте свои мечты в Ваш Dreambook</string>
    <string name="tour_desc_1">Чтобы мечта исполнилась её надо визуализировать и детально описать.</string>
    <string name="one">one.</string>
    <string name="two">two.</string>
    <string name="three">three.</string>
</resources>