<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_group_main">
        <item
            android:id="@+id/photos"
            android:icon="@drawable/ic_gallery"
            android:title="@string/photos"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/edit"
            android:icon="@drawable/ic_edit"
            android:title="@string/edit_profile"
            app:showAsAction="never"/>
        <item
            android:id="@+id/request_friendship"
            android:icon="@drawable/ic_add_friend"
            android:title="@string/add_friend"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/deny_friendship_request"
            android:title="@string/deny_friendship_request"
            app:showAsAction="never"/>
        <item
            android:id="@+id/subscribe"
            android:title="@string/subscribe"
            app:showAsAction="never"/>
        <item
            android:id="@+id/unsubscribe"
            android:title="@string/unsubscribe"
            app:showAsAction="never"/>
        <item
            android:id="@+id/unfriend"
            android:title="@string/unfriend"
            app:showAsAction="never"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            app:showAsAction="never"/>
    </group>
</menu>