<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_group_main">
        <item
            android:id="@+id/mark_done"
            android:title="@string/mark_dream_done"
            app:showAsAction="never"/>
        <item
            android:id="@+id/take"
            android:title="@string/take_dream"
            app:showAsAction="never"/>
        <item
            android:id="@+id/propose"
            android:title="@string/proposed_dream"
            app:showAsAction="never"/>
        <item
            android:id="@+id/edit"
            android:icon="@drawable/ic_edit"
            android:title="@string/edit_profile"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            app:showAsAction="never"/>
    </group>
</menu>