<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_group_main">
        <item
            android:id="@+id/add"
            android:icon="@drawable/ic_plus"
            android:title="@string/add_photo"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/save"
            android:icon="@drawable/ic_ok"
            android:title="@string/save"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/edit"
            android:icon="@drawable/ic_edit"
            android:title="@string/edit"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            app:showAsAction="never"/>
    </group>
</menu>