<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/purpure"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.mydreams.android.activities.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/temp_string"
            android:src="@drawable/logo_white"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Dreambook"
            android:textColor="#FFF"
            android:textSize="44sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <com.rey.material.widget.EditText
        android:id="@+id/loginWrapper"
        style="@style/WhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_login_hint"
        android:inputType="textEmailAddress"
        app:et_inputId="@+id/editLogin"
        app:et_supportMode="helper"/>

    <com.rey.material.widget.EditText
        android:id="@+id/passwordWrapper"
        style="@style/WhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password_hint"
        android:inputType="textPassword"
        app:et_inputId="@+id/editPassword"
        app:et_supportMode="helper"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.rey.material.widget.Button
            android:id="@+id/btnSignIn"
            style="@style/WhiteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="14dp"
            android:layout_weight="1"
            android:text="@string/sign_in_caps"
            android:textColor="@color/purpure"/>

        <com.rey.material.widget.Button
            android:id="@+id/btnSignUp"
            style="@style/FlatButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:padding="0dp"
            android:text="@string/sign_up_caps"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>
